@@ -52,6 +52,7 @@ v.0.5dev (ongoing development)
  * IOWarrior driver: fixed 4-line display use
  + IOWarrior driver: add ExtendedMode option
  * lcdproc: unbreak compilation on OS X 1.5 and higher (Topher Fangio)
+ * server: fix interpretation of numeric priorities (Andrew M. Bishop)
 
 v.0.5.2
  * fix switching on/off the Load screen in lcdproc client using the menu
